# einscan-s-opensource-scandrive

./: README.md
app/: scanner_backend.py  ui.py
bridge_cpp/: CMakeLists.txt  README.md  build_vs2013_x64.bat  build_windows_x64.bat  einscan_bridge.cpp  einscan_legacy_bridge.cpp
config/: scanner_config.json
docs/: DEPRECATED_EINSCAN_S_NEXT_STEPS.md  REAL_NATIVE_NEXT_STEP.md  SDK_NOTES.md  SDK_WIRING_REPORT.md  ZLUDA_AMD_TEST_PLAN.md
scripts/: diagnose_build_env.bat  download_deprecated_sdk.bat  run_sdk_inspector.bat  test_native_detect.bat  test_native_scan.bat
tools/: inspect_sdk.py
